--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <h6>Titulo6</h6>
 <p>parafo</p>
 <em>cursiva</em>
-<b>enfacis</b>
-<img src="" alt="gatito url">
-<img src="" alt="gatito.jpg">
-<strong></strong>
-<i></i>
-<span></span>
-<div></div>
+<b>negrita</b>
+<i>cursiva</i>
+<strong>negrita</strong>
+<span>span</span>
+<div>div</div>
+<img src="https://images.hola.com/imagenes/mascotas/20180925130054/consejos-para-cuidar-a-un-gatito-recien-nacido-cs/0-601-526/cuidardgatito-t.jpg?tx=w_680" alt="gatito url">
+<img src="./img/cuidardgatito-t.jpg" alt="gatito.jpg">
