--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
-<h1>Titulo1</h1>
-<h2>Tutulo2</h2>
-<h3>Titulo3</h3>
-<h4>Titulo4</h4>
-<h5>Titulo5</h5>
-<h6>Titulo6</h6>
-<p>parafo</p>
-<em>cursiva</em>
-<b>negrita</b>
-<i>cursiva</i>
-<strong>negrita</strong>
-<span>span</span>
-<div>div</div>
-<img src="https://images.hola.com/imagenes/mascotas/20180925130054/consejos-para-cuidar-a-un-gatito-recien-nacido-cs/0-601-526/cuidardgatito-t.jpg?tx=w_680" alt="gatito url">
-<img src="./img/cuidardgatito-t.jpg" alt="gatito.jpg">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Titulo1</h1>
+    <h2>Tutulo2</h2>
+    <h3>Titulo3</h3>
+    <h4>Titulo4</h4>
+    <h5>Titulo5</h5>
+    <h6>Titulo6</h6>
+    <p>parafo</p>
+    <em>cursiva</em>
+    <b>negrita</b>
+    <i>cursiva</i>
+    <strong>negrita</strong>
+    <span>span</span>
+    <div>div</div>
+    <ol>
+        <li>lista ordenada</li>
+    </ol>
+    <ol>
+        <ul>lista desaordenada</ul>
+    </ol>
+    <img src="https://images.hola.com/imagenes/mascotas/20180925130054/consejos-para-cuidar-a-un-gatito-recien-nacido-cs/0-601-526/cuidardgatito-t.jpg?tx=w_680" alt="gatito url">
+    <img src="./img/cuidardgatito-t.jpg" alt="gatito.jpg">
+</body>
+</html>
